<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.watermark.pixman.view.fragments.EditorFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.watermark.pixman.view.PixManImageView
            android:id="@+id/iv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_lights"
            android:text="Hello World!"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/undo"
            android:onClick="@{(view) -> fragment.undoClick(view)}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview"

            />

        <Button
            android:id="@+id/btn_flipHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flip_horizontal"
            android:onClick="@{(view) -> fragment.horizontalFlipClick(view)}"

            app:layout_constraintLeft_toRightOf="@+id/btn_undo"
            app:layout_constraintTop_toTopOf="@+id/btn_undo" />

        <Button
            android:id="@+id/btn_flipVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flip_vertical"
            android:onClick="@{(view) -> fragment.verticalFlipClick(view)}"
            app:layout_constraintLeft_toLeftOf="@+id/btn_undo"
            app:layout_constraintTop_toBottomOf="@+id/btn_undo" />

        <Button
            android:id="@+id/btn_opacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opacity_50"
            android:onClick="@{(view) -> fragment.opacityClick(view)}"
            app:layout_constraintLeft_toRightOf="@+id/btn_flipVertical"
            app:layout_constraintTop_toTopOf="@+id/btn_flipVertical" />

        <Button
            android:id="@+id/btn_addText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text_greedy_game"
            android:onClick="@{(view) -> fragment.addTextClick(view)}"

            app:layout_constraintLeft_toLeftOf="@+id/btn_flipVertical"
            app:layout_constraintTop_toBottomOf="@+id/btn_flipVertical" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{(view) -> fragment.saveClick(view)}"
            app:layout_constraintLeft_toRightOf="@+id/btn_addText"
            app:layout_constraintTop_toTopOf="@+id/btn_addText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>